# multihook

./: .gitignore  Cargo.toml  build-test.bat  build.bat
dll/crash_hook/: Cargo.toml  build.rs
dll/crash_hook/src/: lib.rs
dll/multi_hook/: Cargo.toml
dll/multi_hook/src/: lib.rs
hook_cli/: Cargo.toml  build.rs
hook_cli/src/: main.rs
hook_tester/: Cargo.toml
hook_tester/src/: main.rs
utils/dll_injector/: Cargo.toml
utils/dll_injector/src/: lib.rs
utils/msg_protocol/: Cargo.toml
utils/msg_protocol/src/: lib.rs
utils/pipe_com/: Cargo.toml
utils/pipe_com/src/: lib.rs
