[package]
name = "hook_cli"
description = "CLI for hooking DLLs into processes"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[build-dependencies]
tauri-winres = "0.1"

[dependencies]
pipe_com.workspace = true
dll_injector.workspace = true
msg_protocol.workspace = true

log.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Security",
] }

env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

[package.metadata.tauri-winres]
LegalCopyright = "©2024 MH"

[lints]
workspace = true
