[package]
name = "hook_tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }

windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader"
] }

[lints]
workspace = true
