[package]
name = "msg_protocol"
description = "Message protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true

chrono = "0.4"

[lints]
workspace = true
